changed font color and added border

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,3 +28,10 @@ body {
   fill: none;
   stroke: steelblue;
 }
+
+#apple-stock-chart {
+  border: 5px solid black;
+}
+.chart-container {
+  color:red;
+}
